	* Added a method to obtain configuration lines directly from configuration. This will be used when usergroup indexing is impemented.
	* Removed anonymous and "any" items from user groups; clarified some form titles
	* Temporarily removed user group configuration for the realm
	* Added tag generation for user groups. No group parameter injection yet.

2009-10-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Activate the new command line tool

2009-10-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a new TSFE hook to force user groups for pages and content
	* Added a user group field to the indexing configuration record
	* Added a hook to exclude tx_mnogosearch_gid from cHash parameters
	* Added new classes for more structured processing in the command line tool

2009-10-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Renamed TSFE postproc hook class
	* Moved TCEmain and CMSLayout hook classes

2009-04-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed issue with HTML tags in search results title

2009-04-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #3040: uppercase extensions are not recognized
	* Tuned search results so that subject has more weight than body
	* Fixed bug #3067: order of the checkboxes (or selections) for advanced search
	* Fixed bug #2531: some issues about xhtml validation
	* Fixed bug #3036: Problems with hypenated database names

2009-02-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Applied Emile's changes to the template

2009-02-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed wrong CSS property

2009-01-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed "Last-modified" handling to provide more realistic modification dates
	* Misc updates in the manual

2009-01-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 2.2

2009-01-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2370: Pi1 is always USER_INT
	* Updated manual with the information about configuring the advanced search form
	* Fixed bug #1937: little changes in the manual